[workspace]
resolver = "2"
members = [
    # core ibc implementation
    "ibc/derive",
    "ibc/modules",
    "ibc/proto",
    "ibc/proto-compiler",

    # algorithms
    "beefy/verifier",
    "beefy/prover",
    "beefy/primitives",

    # ibc light clients
    "light-clients/common",

    # utilities
     "utils/subxt/codegen",
     "utils/subxt/generated",
]

[patch.crates-io]
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core-hashing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-debug-derive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-panic-handler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
