[workspace]
resolver = "2"
members = [
    # core ibc implementation
    "ibc/derive",
    "ibc/modules",
    "ibc/proto",
    "ibc/proto-compiler",

    # algorithms
    "beefy/verifier",
    "beefy/prover",
    "beefy/primitives",

    # ibc light clients
    "light-clients/common",

    # utilities
     "utils/subxt/codegen",
     "utils/subxt/generated",
]

[patch.crates-io]
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-core-hashing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-debug-derive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-panic-handler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
