[package]
name = "beefy-light-client"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
rs_merkle = { version = "1.2.0", default-features = false }
mmr-lib= { package = "ckb-merkle-mountain-range", version = "0.3.2", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"]  }

# substrate
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false}
sp-core-hashing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false}
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
beefy-mmr = { package = "pallet-beefy-mmr", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-beefy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

# local
beefy-light-client-primitives = { path = "../primitives", default-features = false }
light-client-common = { path = "../../light-clients/common", default-features = false }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
hex-literal = "0.3.4"
serde_json = "1.0.74"
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
beefy-prover = { path = "../prover", features = ["build-metadata-from-ws"] }
hex = "0.4.3"
futures = "0.3.21"
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false}


[features]
default = ["std", "build-metadata-from-ws"]
build-metadata-from-ws = ["beefy-prover/build-metadata-from-ws"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-core/std",
    "sp-io/std",
    "beefy-mmr/std",
    "sp-beefy/std",
    "pallet-mmr/std",
    "pallet-mmr-primitives/std",
    "rs_merkle/std",
    "mmr-lib/std",
    "frame-support/std",
    "beefy-light-client-primitives/std",
    "sp-trie/std",
    "light-client-common/std",
]
